# toys

./: .eslintrc.cjs  .gitignore  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package copy.json  package-lock.json  package.json  stats.html
src/main/: index.ts
src/main/icon/: icon.psd
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  GS.tsx  Tolam.tsx  Toram.tsx  WoniuSec.tsx  env.d.ts  main.tsx  tool.ts
src/renderer/src/assets/css/: atom.css  font.css  layout.css  normalize.css  style.css
src/renderer/src/assets/css/special/: BannerBox.css  Filing.css  GS.css  LoadingAnimation.css  Menu.css  Tloam.css  Toram.css  VersionInfo.css
src/renderer/src/assets/js-plugin/houdini/: myPain.worklet.js  (+1 more)
src/renderer/src/assets/model/: banner.gltf
src/renderer/src/assets/wasm/: Cargo.toml
src/renderer/src/assets/wasm/kiya_gpu/: Cargo.toml
src/renderer/src/assets/wasm/kiya_gpu/src/: lib.rs  main.rs
src/renderer/src/assets/wasm/paint/: Cargo.toml  LICENSE_MIT
src/renderer/src/assets/wasm/src/: lib.rs
src/renderer/src/components/: BabylonBox.tsx  BannerBox copy.tsx  BannerBox.tsx  Filing.tsx  LoadingAnimation.tsx  Menu.tsx  PaintBox.tsx  Versions.tsx
src/renderer/src/components/accessory/: Menu.tsx
src/renderer/src/components/main/: BabylonBox.tsx  BannerBox.tsx  ColorComputeBox.tsx  Index.tsx  Koduck.tsx  MatrixEffectBox.tsx  PaintBox.tsx  Toram.tsx  WoniuSec.tsx
src/renderer/src/components/worker/: ColorCompute new.js  ColorCompute.js  color.js
src/renderer/src/public/model/: banner_new.glb
(+22 files in other folders)
